# sea-rpc

./: .env.example  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_build_table.rs  m20220101_000001_create_deployment_table.rs  m20220101_000001_create_server_table.rs
src/: main.rs  state.rs
src/entities/: build.rs  deployment.rs  mod.rs  prelude.rs  server.rs
