[workspace]
members = ["migration"]

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
sea-orm = { version = "0.11", features = [
	"runtime-tokio-native-tls",
	"sqlx-postgres",
] }
sea-orm-migration = { version = "0.11", features = [
	"runtime-tokio-native-tls",
	"sqlx-postgres",
] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenv = "0.15"
envy = "0.4"

[package]
name = "sea-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
sea-orm.workspace = true
serde.workspace = true
anyhow.workspace = true
dotenv.workspace = true
envy.workspace = true
